<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCategoryActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_icon"
        style="@style/TextStyleNormalBold20"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/ivCategoryIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:onClick="onClickChoose"
        android:layout_marginLeft="30dp"
        app:srcCompat="@drawable/edit_image" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_name"
        style="@style/TextStyleNormalBold20"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etCategoryTitle"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave"
        android:onClick="onClickSave"
        style="@style/TextStyleNormalBold20"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_activated"
        android:text="@string/save"/>

</LinearLayout>
