<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StatisticsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivCalendar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:onClick="onBtnImgCalendarClick"
            app:srcCompat="@drawable/today" />

        <TextView
            android:id="@+id/tvStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onClickStartDate"
            android:textAlignment="center"
            android:textSize="30sp"
            android:clickable="true"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="-"
            android:textAlignment="center"
            android:textSize="30sp"
            />

        <TextView
            android:id="@+id/tvEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onClickEndDate"
            android:textAlignment="center"
            android:textSize="30sp"
            android:clickable="true"
            android:layout_weight="1"/>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_group_stat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <RadioButton
            android:id="@+id/rBtnFirstStat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/first_stat"
            style="@style/TextStyleNormal24" />

        <RadioButton
            android:id="@+id/rBtnSecondStat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/second_stat"
            style="@style/TextStyleNormal24" />

        <RadioButton
            android:id="@+id/rBtnThirdStat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/third_stat"
            style="@style/TextStyleNormal24" />

        <RadioButton
            android:id="@+id/rBtnFourthStat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/forth_stat"
            style="@style/TextStyleNormal24" />

    </RadioGroup>

    <Button
        style="@style/TextStyleNormalBold20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0"
        android:background="@drawable/button_activated"
        android:layout_gravity="bottom"
        android:onClick="onClickViewStatistics"
        android:text="@string/view_statistics" />

</LinearLayout>